tests/snapshots/cli__tests__language-scoping-inplace-python-windows.snap
---
source: tests/cli.rs
expression: "CommandSnap {\n    args,\n    stdin: None,\n    stdout: stdout.split_inclusive('\\n').map(|s| s.to_owned()).collect_vec(),\n    exit_code,\n}"
info:
  stderr: ""
---
args:
  - "-vvvv"
  - "--sorted"
  - "--python"
  - function-names
  - foo
  - baz
stdin: ~
stdout:
  - "1-shebanged\n"
  - "1.py\n"
  - "subdir\\2.py\n"
  - "subdir\\subdir\\3.py\n"
exit_code: 0
