tests/snapshots/cli__tests__line-numbers-outside-search-mode.snap
---
source: tests/cli.rs
expression: "CommandSnap {\n    args,\n    stdin: stdin.map(|s|\n            s.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec()),\n    stdout: stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "--line-numbers"
  - A
  - X
stdin:
  - "A\n"
  - B
stdout:
  - "1:X\n"
  - "2:B"
exit_code: 0
