tests/snapshots/cli__tests__python-search-class.snap
---
source: tests/cli.rs
expression: "CommandSnap {\n    args,\n    stdin: stdin.map(|s|\n            s.split_inclusive('\\n').map(|s| s.to_owned()).collect_vec()),\n    stdout: stdout.split_inclusive('\\n').map(|s| s.to_owned()).collect_vec(),\n    exit_code,\n}"
info:
  stderr: ""
---
args:
  - "--python"
  - class
  - "\\d"
stdin: ~
stdout:
  - "docs/samples/birds\n"
  - "15:        self.age += 1\n"
  - "\n"
  - "docs/samples/birds.py\n"
  - "13:        self.age += 1\n"
  - "\n"
exit_code: 0
